<resources>
    <string name="app_name">Rent A Car</string>
    <string name="todo">TODO</string>
    <string name="nation_wide_car_app">Nation wide car app</string>
    <string name="rent_a_car">Rent-a-car</string>
    <string name="dashboard">Dashboard</string>
    <string name="slogan">Powered by Rent-A-Car</string>
    <string name="menu_home">Home</string>
    <string name="menu_car_list">Cars</string>
    <string name="menu_journey">Journey</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_communication">Communication</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_settings">Settings</string>
    <string name="start_new_journey">Start new journey</string>
    <string name="menu_search">New journey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings for the on boarding screen -->
    <!-- titles-->
    <string name="first_slide_title">Search your destination</string>
    <string name="second_slide_title">No need to call</string>
    <string name="third_slide_title">Add your favourite places</string>
    <string name="fourth_slide_title">Sit back and enjoy</string>

    <!-- Descriptions -->
    <string name="first_slide_desc">You can search any destination. Rent a car will display available cars for that specific destination</string>
    <string name="second_slide_desc">No need to call and book a car everything happens online booking the car set the destination and the payment</string>
    <string name="third_slide_desc">Add the favourite destinations and frequent destination you go</string>
    <string name="fourth_slide_desc">We will handle everything for you. You just have to have the app inside your pocket.</string>

    <!-- Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started_btn">Lets get started</string>
</resources>
