<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DashboardActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/toolbar"
                app:navigationIcon="@drawable/menu_icon" />

            <TextView
                android:id="@+id/dashboard_text"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/rent_a_car"
                android:textSize="36sp"
                app:fontFamily="@font/baloo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.105" />

            <TextView
                android:id="@+id/dashboard_sub_text"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/start_new_journey"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.219" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="144dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/dashboard_text"
                app:layout_constraintTop_toBottomOf="@+id/tool_bar"
                app:srcCompat="@drawable/taxi_icon"
                android:contentDescription="@string/todo"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView4"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_home"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/home"
                            android:contentDescription="@string/todo"
                             />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView5"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_search"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15sp"
                            app:srcCompat="@drawable/search"
                            android:contentDescription="@string/todo"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginTop="172dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView6"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_journey"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/checklist"
                            android:contentDescription="@string/todo"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView7"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_settings"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15sp"
                            app:srcCompat="@drawable/gear"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_marginTop="352dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView8"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_my_profile"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/profile"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="2dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView9"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/menu_share"
                            android:textSize="24sp"
                            app:fontFamily="@font/baloo" />

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15sp"
                            app:srcCompat="@drawable/share"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>